# LPN1KoL-groupbuy-bot

./: .env.example  .env.modular.example  .env.monolith.example  .gitattributes  .gitignore  .gitkeep  CLAUDE.md  README.md  docker-compose.4services.yml  docker-compose.light.yml  docker-compose.microservices.yml  docker-compose.modular.yml  docker-compose.monolith.yml  docker-compose.prod.yml  docker-compose.python.yml  docker-compose.single.yml  docker-compose.two-server.yml  docker-compose.unified.yml  docker-compose.yml
admin/: main.py  requirements.txt
admin-backend/: Dockerfile  package-lock.json  package.json
admin-frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
app/: main.py  requirements.txt
backend/: Dockerfile  alembic.ini  create_admin.py  main.py  requirements.txt
backend-monolith/: Dockerfile  alembic.ini  requirements.txt
bot/: config.py  main.py
core/: Dockerfile  entrypoint.sh
core-fastapi/: Dockerfile  README.md  main.py  requirements.txt
core-rust/: Dockerfile.python  app.py  requirements.txt
deploy_v2/: .env.example  README.md  docker-compose.yml
docs/: API.md  TROUBLESHOOTING-POSTGRES-INIT.md  openapi.yaml  procurement-intelligence.md
eventflow_backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
experiments/: create_docx.py  lk-preview.html  preview-main.html  preview.html  (+14 more)
services/shared-lib/: Dockerfile  pyproject.toml
services/shared-lib/groupbuy_shared/: auth.py  config.py  db.py  exceptions.py  kafka.py  middleware.py  redis_client.py
(+777 files in other folders)
